kouhai/tests/cases/error/array_push_wrong_type.kou
fn main():
    let a = Array[I64]()
    a.push("hello")
